--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
-@charset "UTF-8";
+/* @charset "UTF-8"; */
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -77,7 +77,7 @@ hr {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 }
 
 p {
@@ -2397,7 +2397,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #000000;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2406,9 +2406,9 @@ textarea.form-control {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: .5rem 1rem;
   font-size: 0.9rem;
-  line-height: 1.6;
+  line-height: 1.3;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -2437,28 +2437,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #3490dc;
   border-color: #3490dc;
 }
 .btn-primary:hover {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #227dc7;
   border-color: #2176bd;
 }
 .btn-primary:focus, .btn-primary.focus {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #227dc7;
   border-color: #2176bd;
   box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #3490dc;
   border-color: #3490dc;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #2176bd;
   border-color: #1f6fb2;
 }
@@ -2467,28 +2467,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-secondary {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #6c757d;
   border-color: #6c757d;
 }
 .btn-secondary:hover {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #5a6268;
   border-color: #545b62;
 }
 .btn-secondary:focus, .btn-secondary.focus {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #5a6268;
   border-color: #545b62;
   box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #6c757d;
   border-color: #6c757d;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #545b62;
   border-color: #4e555b;
 }
@@ -2497,7 +2497,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-success {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #38c172;
   border-color: #38c172;
 }
@@ -2587,7 +2587,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-danger {
-  color: #fff;
+  color: rgb(0, 0, 0);
   background-color: #e3342f;
   border-color: #e3342f;
 }
@@ -3929,7 +3929,7 @@ input[type=button].btn-block {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: #3490dc;
 }
 
@@ -3960,6 +3960,7 @@ input[type=button].btn-block {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  background:#ADD8E6
 }
 .navbar .container,
 .navbar .container-fluid,
@@ -10001,4 +10002,95 @@ h3 {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+
+/* custom */
+
+
+.styled-table {
+  border-collapse: collapse;
+  min-width: 100px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border-radius: 6px; 
+  padding: 1rem;
+  margin: 1rem;
+}
+.styled-table thead tr {
+  text-align: left;
+border-collapse: collapse;
+}
+.styled-table th, 
+.styled-table td {
+  padding: 12px 11px;
+}
+.styled-table tbody tr {
+  border-bottom: thin #3169a8;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #e0eaf5;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #3169a8;
+}
+.styled-table tbody tr.active-row {
+  font-weight: bold;
+  color: #3169a8;
+}
+
+/* styled-table-wide */
+.styled-table-wide {
+  border-collapse: collapse;
+  min-width: 1000px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border-radius: 6px;
+  padding: 1rem;
+  margin: 1rem;
+}
+.styled-table-wide thead tr {
+  text-align: left;
+border-collapse: collapse;
+}
+.styled-table-wide th,
+.styled-table-wide td {
+  padding: 12px 15px;
+}
+.styled-table-wide tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table-wide tbody tr:nth-of-type(even) {
+  background-color: #e0eaf5;
+}
+
+.styled-table-wide tbody tr:last-of-type {
+  border-bottom: 2px solid #3169a8;
+}
+.styled-tabl-wide tbody tr.active-row {
+  font-weight: bold;
+  color: #3169a8;
+}
+
+.cart-img{
+	border-radius: 0.5rem;
+	display: flex;
+	width: 100px;
+	height: 100px;
+}
+
+/* view products */
+/* .cart__like {
+	display: grid;
+	grid-template-columns: 1.5fr 1.5fr;
+	padding: 5rem 8rem;
+  }
+   */
+
+image {
+  width: 90;
+  height: 50%;
+  padding: rem 12rem;
+  position: absolute;
 }
